# diploma_cpp38

SearchEngine/: CMakeLists.txt  File1.txt  File2.txt  File3.txt  File4.txt  README.md  config.ini
SearchEngine/src/: config_reader.cpp  config_reader.h  db_manager.cpp  db_manager.h  file_scanner.cpp  file_scanner.h  indexer_main.cpp  searcher_main.cpp  text_processor.cpp  text_processor.h  thread_pool.cpp  thread_pool.h
